; ModuleID = '/home/carl/AnghaBench/openwrt/package/kernel/lantiq/ltq-deu/src/extr_ifxmips_md5_hmac.c_md5_hmac_init.c'
source_filename = "/home/carl/AnghaBench/openwrt/package/kernel/lantiq/ltq-deu/src/extr_ifxmips_md5_hmac.c_md5_hmac_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.shash_desc = type { i32 }
%struct.md5_hmac_ctx = type { i32, i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.shash_desc*)* @md5_hmac_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @md5_hmac_init(%struct.shash_desc* %0) #0 {
  %2 = alloca %struct.shash_desc*, align 8
  %3 = alloca %struct.md5_hmac_ctx*, align 8
  store %struct.shash_desc* %0, %struct.shash_desc** %2, align 8
  %4 = load %struct.shash_desc*, %struct.shash_desc** %2, align 8
  %5 = getelementptr inbounds %struct.shash_desc, %struct.shash_desc* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = call %struct.md5_hmac_ctx* @crypto_shash_ctx(i32 %6)
  store %struct.md5_hmac_ctx* %7, %struct.md5_hmac_ctx** %3, align 8
  %8 = load %struct.md5_hmac_ctx*, %struct.md5_hmac_ctx** %3, align 8
  %9 = getelementptr inbounds %struct.md5_hmac_ctx, %struct.md5_hmac_ctx* %8, i32 0, i32 2
  store i64 0, i64* %9, align 8
  %10 = load %struct.md5_hmac_ctx*, %struct.md5_hmac_ctx** %3, align 8
  %11 = getelementptr inbounds %struct.md5_hmac_ctx, %struct.md5_hmac_ctx* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.md5_hmac_ctx*, %struct.md5_hmac_ctx** %3, align 8
  %14 = getelementptr inbounds %struct.md5_hmac_ctx, %struct.md5_hmac_ctx* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = call i32 @md5_hmac_setkey_hw(i32 %12, i32 %15)
  ret i32 0
}

declare dso_local %struct.md5_hmac_ctx* @crypto_shash_ctx(i32) #1

declare dso_local i32 @md5_hmac_setkey_hw(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
